[ENCHANT] Infinite loop when end word position is not found https://bugs.webkit.org/show_bug.cgi?id=103139

Reviewed by Martin Robinson.

Covered by existing tests in editing/spelling.

* editing/visible_units.cpp:
(WebCore::isLogicalStartOfWord): Make it private again.
(WebCore::islogicalEndOfWord): Ditto.
* editing/visible_units.h:
* platform/text/enchant/TextCheckerEnchant.cpp:
(WebCore::TextCheckerEnchant::checkSpellingOfWord): Helper funtion
to check a word inside a string using the loaded dictionaries.
(WebCore::TextCheckerEnchant::checkSpellingOfString): Optimize and
simply the code by using the word iterator to iterate the
words.
* platform/text/enchant/TextCheckerEnchant.h:
(TextCheckerEnchant):

Canonical link: https://commits.webkit.org/121279@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135618 268f45cc-cd09-0410-ab3c-d52691b4dbfc