Source/WebCore/editing/visible_units.h
@@ -46,9 +46,6 @@ VisiblePosition nextWordPosition(const VisiblePosition &);
 VisiblePosition rightWordPosition(const VisiblePosition&, bool skipsSpaceWhenMovingRight);
 VisiblePosition leftWordPosition(const VisiblePosition&, bool skipsSpaceWhenMovingRight);
 bool isStartOfWord(const VisiblePosition&);
-// used by TextCheckerEnchant.cpp
-bool isLogicalStartOfWord(TextBreakIterator*, int position, bool hardLineBreak = false);
-bool islogicalEndOfWord(TextBreakIterator*, int position, bool hardLineBreak = false);
 
 // sentences
 VisiblePosition startOfSentence(const VisiblePosition &);
